tests/vendor/valid/simple/switch_break.c
//expect 10
//tags: simple, switch
int main(void) {
    int a = 5;
    switch (a) {
        case 5:
            a = 10;
            break;
        case 6:
            a = 0;
            break;
    }
    return a;
}