tests/vendor/invalid/semantics/duplicate_case_in_labeled_switch.c
//tags: simple, switch
int main(void) {
    int a = 0;
label:
    switch (a) {
        case 1:
        case 1:
            break;
    }
    return 0;
}